# ZMQServer

./: CMakeLists.txt  brokerZMQ.cpp  clientZMQ.cpp  workerZMQ.cpp
include/client/: mironDDS_listener.hpp  query_client.hpp  variant_client.hpp
include/queries/: change_parameter.hpp  change_velocity.hpp  positions.hpp  query.hpp
src/: MironDDSListener.cpp  brokerZMQ.cpp  clientZMQ.cpp  minizinc.cpp
